# training

./: .gitignore  .ignore  resources.txt
cpp/: 10_bit_fields.cpp  11_arrays.cpp  12_iterators.cpp  13_iterators.cpp  14_loops.cpp  15_loops.cpp  16_file_io.cpp  17_file_io.cpp  18_streams.cpp  19_stream_manipulators.cpp  20_flow_control.cpp  21_metaprogramming_factorial.cpp  21_metaprogramming_parameter_pack.cpp  22_metaprogramming_recursion.cpp  23_metaprogramming_template_specialization.cpp  24_requires_clause.cpp  25_ordering_by_constraints.cpp  26_concepts_vs_type_traits.cpp  27_type_predicates.cpp  28_iterating_with_integer_sequence.cpp  29_tag_dispatching.cpp  2_function.cpp  30_expression_validity.cpp  31_calculating_power.cpp  32_generic_min_max.cpp  33_move_forward.cpp  34_const_keyword.cpp  35_mutable_keyword.cpp  36_friend_function.cpp  37_friend_method.cpp  38_friend_class.cpp  39_class_keyword.cpp  3_literals.cpp  40_enum_keyword.cpp  41_union_keyword.cpp  42_type_keywords.cpp  42_type_keywords_c.c  43_variable_declaration_keywords.cpp  44_keywords.cpp  45_returning_several_values.cpp  (+33 more)
dp/: .gitignore  1_crtp.cpp  2_mixin_inheritance.cpp  2_static_polymorphism.cpp  3_static_polymorphism.cpp  4_Solid_SRP.cpp  5_sOlid_OCP.cpp  6_soLid_LSP.cpp  7_solId_ISP.cpp  8_soliD_DIP.cpp  CMakeLists.txt
dp/boost-di-git/: .gitignore  PKGBUILD  git.txt
dsa/: .nvim.lua  10_class_templates.cpp  11_object_and_comparable.cpp  12_function_object.cpp  13_MemoryCell1.cpp  13_MemoryCell1.h  13_MemoryCell2.cpp  13_MemoryCell2.h  13_separate_compilation_of_class_templates.cpp  14_matrix.h  14_matrix_example.cpp  15_max_subseq_sum.cpp  15_max_subseq_sum.h  15_max_subseq_sum_main.cpp  15_max_subseq_sum_test.cpp  16_bin_search.cpp  17_gcd.cpp  18_pow.cpp  19_iterType.h  19_stl_vector_list.cpp  1_class.cpp  1_recursion.cpp  20_vector.cpp  20_vector.h  20_vector_main.cpp  20_vector_test.cpp  21_list.h  21_list_main.cpp  21_list_test.cpp  22_balance_checker.h  22_config.h  22_notation_converter.h  22_queue.h  22_stack.h  22_stack_queue.cpp  23_binary_node.h  23_binary_search_tree.h  23_binary_search_tree_test.cpp  23_binary_tree_main.cpp  23_binary_tree_node.h  (+34 more)
lc/: 1.two-sum.cpp  10.regular-expression-matching.cpp  2.add-two-numbers.cpp  3.longest-substring-without-repeating-characters.cpp  4.median-of-two-sorted-arrays.cpp  5.longest-palindromic-substring.cpp  6.zigzag-conversion.cpp  7.reverse-integer.cpp  8.string-to-integer-atoi.cpp  9.palindrome-number.cpp
stl_algorithms/: .exrc  1_batch_operations.cpp  1_batch_operations_for_each.cpp  2_search_operations.cpp  CMakeLists.txt  pre_1_barrier.cpp  pre_2_dead_lock.cpp  pre_3_execution_policies.cpp  pre_4_projections.cpp
threading/: 1_hello.cpp  2_reference_wrapper.cpp  3_passing_references.cpp  4_async_calls.cpp  5_basic_synchronization.cpp  6_always_joined.cpp  7_current_thread_operations.cpp  8_condition_variables.cpp  CMakeLists.txt
