cmake_minimum_required (VERSION 4.1)
project (training)
include (/desktop/nvim/cmake/config.cmake)
add_compile_options (-Wall -Wextra -Werror -Wno-unused-parameter)

add_executable (1_crtp 1_crtp.cpp)
add_executable (2_mixin_inheritance 2_mixin_inheritance.cpp)
add_executable (3_static_polymorphism 3_static_polymorphism.cpp)
add_executable (4_Solid_SRP 4_Solid_SRP.cpp)
add_executable (5_sOlid_OCP 5_sOlid_OCP.cpp)
add_executable (6_soLid_LSP 6_soLid_LSP.cpp)
add_executable (7_solId_ISP 7_solId_ISP.cpp)

add_executable (8_soliD_DIP 8_soliD_DIP.cpp)
target_include_directories(8_soliD_DIP PRIVATE ./boost-di-git/pkg/boost-di-git/usr/include/)
